bact to basic setup